--- a/github/workflows/deploy_master.yaml
+++ b/github/workflows/deploy_master.yaml
@@ -17,5 +17,5 @@ jobs:
           port: 22
           script: | 
             cd /var/www/sanitizer/
-            git pull origin main
+            git pull origin/main
             git status
